--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,14 @@ uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 PyMuPDF==1.23.8
 python-docx==1.1.0
-faiss-cpu==1.8.0
 transformers>=4.35.2
+torch==2.1.1
 sentence-transformers==2.2.2
 spacy==3.7.2
 python-dotenv==1.0.0
 pydantic==2.5.0
 requests==2.31.0
 anyio==4.0.0
+numpy==1.24.3
+scipy==1.11.3
+scikit-learn==1.3.2
