--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ spacy==3.7.2
 python-dotenv==1.0.0
 pydantic==2.5.0
 requests==2.31.0
-anyio==4.0.0
+anyio>=3.7.1,<4.0.0
 numpy==1.24.3
 scipy==1.11.3
 scikit-learn==1.3.2
