--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
+# Core backend with minimal dependencies
 fastapi>=0.104.1
 uvicorn[standard]>=0.24.0
 python-multipart>=0.0.6
+
+# Lightweight document parsing
 PyMuPDF>=1.23.8
 python-docx>=1.1.0
-transformers>=4.35.2
-torch>=2.1.0
-sentence-transformers>=2.2.2
-spacy>=3.7.2
+
+# Essential utilities only
 python-dotenv>=1.0.0
 pydantic>=2.5.0
 requests>=2.31.0
 anyio>=3.7.1,<5.0.0
 numpy>=1.24.0
-scipy>=1.11.0
-scikit-learn>=1.3.0
+
+# Remove heavy AI dependencies for now - add them selectively
+# transformers will be installed separately if needed
+# torch will be installed separately if needed
+# sentence-transformers will be installed separately if needed
+# spacy will be installed separately if needed
